--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=JavaDDoS
 spring.data.mongodb.uri=mongodb://localhost:27017/testdb
 spring.session.store-type=mongodb
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/yourdbname
+spring.datasource.username=root
+spring.datasource.password=10101957
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
